# dreamseeker-dezombifier

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
.cargo/: config.toml
resources/: dreamseeker-dezombifier-manifest.rc  dreamseeker-dezombifier.exe.manifest
src/: lib.rs  logging.rs  main.rs  process.rs  service.rs  terminate.rs  util.rs  window.rs
wix/: main.wxs
